--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -24,6 +24,7 @@
 			<h2>Sushi</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</section>
+		<div>what is the problem now</div>
 	</main>
     
 </body>
