--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello Coursera! It's an amazing course.</h1>  
+    <h1>Hello Coursera! Its an amazing course.</h1> 
+
 </body>
 </html>
