--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,28 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Page</title>
+    <title>module2-solution</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-		<h1>Responsive Page</h1>
-	</header>
-	<main>
-		<section>
-			<h2>Chicken</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<h1>Our Menu</h1>
+		<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+			<div>
+				<p class="sub1">Chicken</p>
+				<p class="content">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+				</p>
+			</div>
 		</section>
-		<section>
-			<h2>Beef</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+		<section class="column-lg-4 colmn-md-6 colmn-sm-12">
+			<div>
+				<p class="sub2">Beef</p>
+				<p class="content">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+			</div>
 		</section>
-		<section>
-			<h2>Sushi</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-		</section>
-		<div>what is the problem now</div>
-	</main>
+		<section class="column-lg-4 colmn-md-12 colmn-sm-12">
+			<div>
+				<p class="sub3">Sushi</p>
+				<p class="content">
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+				</p>
+			</div>	
     
 </body>
 </html>
